update sort large file method